// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusBadge snapshot - closed state 1`] = `
<div
  className="inline-flex py-0.5 px-5 text-center justify-center text-xs rounded-2xl border-none gap-2 items-center bg-red-500 text-white"
>
  Closed
   (
  10
  )
</div>
`;

exports[`StatusBadge snapshot - open state 1`] = `
<div
  className="inline-flex py-0.5 px-5 text-center justify-center text-xs rounded-2xl border-none gap-2 items-center bg-green-500 text-white"
>
  Open
   (
  5
  )
</div>
`;
